# portfolio

./: .gitignore  Caddyfile  DockerFile  README.md  docker-compose.dev.yml  docker-compose.yml  makefile  package.json  pyproject.toml  scratch.json
.github/workflows/: build-site.yml
article-processor/: article.py  frontmatter.py  main.py
article-processor/tests/: test_ghost_content.py
article_processor/: article.py  frontmatter.py  main.py  post-template.j2
drafts/: til-securing-your-ansible-vault.md  using-python-in-your-day-job.md  working-with-the-mealie-api.md
drafts/article-processor-write-up/: draft.md
drafts/template/: draft.md
drafts/template copy/: draft.md
ghost-content/: main.py  post-template.j2
ghost-content/dest/: 2021-01-02-reflecting-on-my-first-real-project.md  2021-01-05-ssh-notifications-in-home-assistant.md  2021-02-09-the-best-laptop-ive-ever-used-from-windows-to-the-m1.md  2021-02-12-serving-spa-and-apis-with-caddy.md
site/: globals.js  nuxt.config.js  package-lock.json  package.json  tailwind.config.js
site/components/: AppButton.vue  AppCopyButton.vue  BlogCard.vue  DocsSidebar.vue  ProjectCard.vue  ProjectListItem.vue  TagButton.vue  TestComponent.vue  TheProjectSummary.vue  ThemeSwitcher.vue
site/content/: 2019-04-03-top-5-static-site-generators-in-vue.md  2019-04-05-how-to-get-better-at-coding.md  2019-04-08-introduction-to-gridsome.md  2021-01-02-reflecting-on-my-first-real-project.md  2021-01-05-ssh-notifications-in-home-assistant.md  2021-02-09-the-best-laptop-ive-ever-used-from-windows-to-the-m1.md  (+4 more)
(+24 files in other folders)
