[tool.poetry]
name = "ghost-content"
version = "0.1.0"
description = ""
authors = ["hay-kot <hay-kot@pm.me>"]

[tool.poetry.dependencies]
python = "^3.9"
requests = "^2.25.1"
Jinja2 = "^2.11.3"
python-dateutil = "^2.8.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
