[tool.poetry]
name = "article-processor"
version = "0.1.0"
description = ""
authors = ["hay-kot <hay-kot@pm.me>"]

[tool.poetry.dependencies]
python = "^3.9"
requests = "^2.25.1"
Jinja2 = "^2.11.3"
python-dateutil = "^2.8.1"
python-slugify = "^4.0.1"
PyYAML = "^5.4.1"
pydantic = "^1.8"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
pylint = "^2.7.2"
black = "^20.8b1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
